fix(ui): fix chapters display on small screen

--- a/src/app/playlist/video-session/video-session.component.scss
+++ b/src/app/playlist/video-session/video-session.component.scss
@@ -10,3 +10,9 @@ svg {
 a {
   cursor: pointer;
 }
+
+@media screen and (max-width: 1189px) {
+  .session {
+    flex-direction: column;
+  }
+}
